--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+.bg-beige {
+  background: beige;
+}
+.bg-ivory {
+  background: ivory;
+}
