--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,15 @@
-<p>
-  header works!
-</p>
+<div class="row no-margin no-padding raised rounded padding-h header-wrapper">
+  <div class="col padding-h">
+    <div class="centered logo-wrapper">
+      <div class="logo">
+        <p><span class="color-p">Account</span><span class="color-s">++</span></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    this
+  </div>
+  <div class="col">
+    this
+  </div>
+</div>
