--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,13 +3,13 @@
 </div>
 <div class="bg-p">
   <div class="row">
-    <div class="col bordered segment rounded padding bg-bluish">
+    <div class="col bordered segment rounded-s padding bg-bluish">
       this
     </div>
-    <div class="col bordered segment">
+    <div class="col bordered segment rounded-s padding bg-bluish">
       this
     </div>
-    <div class="col bordered segment">
+    <div class="col bordered segment rounded-s padding bg-bluish">
       this
     </div>
   </div>
