Fixed top navbar

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="row no-margin no-padding raised rounded padding-h header-wrapper">
+<div class="row no-margin no-padding raised centered header-wrapper">
   <div class="col padding-h">
     <div class="centered logo-wrapper">
       <div class="logo">
