--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,12 @@
-<div class="row no-margin no-padding raised centered header-wrapper">
+<div class="row no-margin no-padding padding-h header-wrapper">
   <div class="col padding-h">
     <div class="centered logo-wrapper">
+      <button mat-raised-button color="primary" (click)="sidenav.toggle()">Primary</button>
+      <button mat-raised-button color="warn">Warn</button>
+
       <div class="logo">
         <p><span class="color-p">Account</span><span class="color-s">++</span></p>
       </div>
     </div>
-  </div>
-  <div class="col">
-    this
-  </div>
-  <div class="col">
-    this
   </div>
 </div>
