--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -13,3 +13,16 @@
     }
   }
 }
+
+//Can be used for the sidebar later
+/*.sidebar {
+  height: 100vh;
+  width: 200px;
+  background: #DADADA;
+  position: absolute;
+  left: 0;
+  top: 0;
+}*/
+
+
+
