--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,18 @@
-<div class="row no-margin no-padding padding-h header-wrapper">
-  <div class="col padding-h">
+<div class="row no-padding margin-bs header-wrapper">
+  <div class="col">
+    <div class="margin options">
+      <div class="centered padding option">
+        Profile
+        <fa name="user" class="padding"></fa>
+      </div>
+      <div class="centered padding option">
+        Account Settings
+        <fa name="cog" class="padding"></fa>
+      </div>
+    </div>
     <div class="centered logo-wrapper">
-      <button mat-raised-button color="primary" (click)="sidenav.toggle()">Primary</button>
-      <button mat-raised-button color="warn">Warn</button>
-
       <div class="logo">
-        <p><span class="color-p">Account</span><span class="color-s">++</span></p>
+        <p><span class="color-p">Account</span><span class="color-s">+</span></p>
       </div>
     </div>
   </div>
