--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,5 @@
 .header-wrapper {
-  height: 60px;
+  height: 50px;
   .logo-wrapper {
     width: 100px;
 
@@ -9,6 +9,18 @@
         font-weight: 700;
         margin: 0;
         font-family: "DejaVu Sans Mono";
+      }
+    }
+  }
+
+  .options {
+    float: right;
+    display: inline-flex;
+
+    .option {
+      fa {
+        align-self: center;
+        font-size: 20px;
       }
     }
   }
