Skeleton for top navigation

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,10 +10,19 @@
         <fa name="cog" class="padding"></fa>
       </div>
     </div>
-    <div class="centered logo-wrapper">
-      <div class="logo">
-        <p><span class="color-p">Account</span><span class="color-s">+</span></p>
+    <div class="navigation">
+      <div class="logo-wrapper padding">
+        <div class="logo">
+          <p><span class="color-p">Account</span><span class="color-s">+</span></p>
+        </div>
+      </div>
+      <div class="main-title padding">
+        <div class="centered-v title">
+          <span>Dashboard</span>
+          <fa name="dashboard" class="padding"></fa>
+        </div>
       </div>
     </div>
+
   </div>
 </div>
