--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,12 +16,17 @@
           <p><span class="color-p">Account</span><span class="color-s">+</span></p>
         </div>
       </div>
-      <div class="main-title padding">
-        <div class="centered-v title">
-          <span>Dashboard</span>
-          <fa name="dashboard" class="padding"></fa>
+      <div class="elements">
+        <div class="element padding centered-v">
+          <div class="main-title padding">
+            <div class="centered-v title">
+              <span class="padding">Dashboard</span>
+              <fa name="dashboard" class="padding"></fa>
+            </div>
+          </div>
         </div>
       </div>
+
     </div>
 
   </div>
