--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,12 @@ body {
 .bg-white {
   background: #FFFFFF;
 }
+.bg-red {
+  background: #ff2133;
+}
+.bg-blue {
+  background: #1a20ff;
+}
 
 .bg-bluish {
   background: #c3fff7;
