Working canvas in its own module

--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -13,7 +13,7 @@
 
       </div>
       <div class="col rounded-s bordered segment padding bg-white">
-        this
+        <app-bargraph></app-bargraph>
       </div>
     </div>
   </div>
