--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -15,6 +15,40 @@
       <div class="col rounded-s bordered segment padding bg-white">
         <app-bargraph></app-bargraph>
       </div>
+      <div class="col rounded-s bordered segment padding bg-white">
+        <app-bargraph></app-bargraph>
+      </div>
+      <div class="col rounded-s bordered segment padding bg-white">
+        <app-bargraph></app-bargraph>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col rounded-s bordered segment padding bg-white">
+        <app-bargraph></app-bargraph>
+      </div>
+      <div class="col rounded-s bordered segment padding bg-white">
+        <app-bargraph></app-bargraph>
+      </div>
+      <div class="col rounded-s bordered segment padding bg-white">
+        <app-bargraph></app-bargraph>
+      </div>
+      <div class="col rounded-s bordered segment padding bg-white">
+        <app-bargraph></app-bargraph>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col rounded-s bordered segment padding bg-white">
+        <app-bargraph></app-bargraph>
+      </div>
+      <div class="col rounded-s bordered segment padding bg-white">
+        <app-bargraph></app-bargraph>
+      </div>
+      <div class="col rounded-s bordered segment padding bg-white">
+        <app-bargraph></app-bargraph>
+      </div>
+      <div class="col rounded-s bordered segment padding bg-white">
+        <app-bargraph></app-bargraph>
+      </div>
     </div>
   </div>
 </div>
