Working bar chart on canvas

--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -4,7 +4,7 @@
 <div class="content" #content>
   <!--<app-piechart [graph]="graph" [max]="max"></app-piechart>-->
   <div >
-    <app-bargraph [height]="height" [width]="width"></app-bargraph>
+    <app-bargraph [graph]="graph" [height]="height" [width]="width"></app-bargraph>
   </div>
 
 
