Shared color interface using RGB

--- a/src/app/modules/graphs/components/bargraph/bargraph.component.html
+++ b/src/app/modules/graphs/components/bargraph/bargraph.component.html
@@ -1,1 +1,1 @@
-<canvas  class="segment bordered centered" #canvas></canvas>
+<canvas  class="segment bordered raised rounded-s centered" #canvas></canvas>
