--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -3,8 +3,15 @@
 </div>
 <div class="content" #content>
   <!--<app-piechart [graph]="graph" [max]="max"></app-piechart>-->
-  <div >
-    <app-bargraph [graph]="graph" [height]="height" [width]="width"></app-bargraph>
+  <div class="row" >
+    <div class="col">
+      <app-bargraph [graph]="graph" [height]="height" [width]="width" [barWidth]="barWidth"></app-bargraph>
+
+    </div>
+    <div class="col">
+      <app-bargraph [graph]="graph" [height]="height" [width]="width" [barWidth]="barWidth"></app-bargraph>
+
+    </div>
   </div>
 
 
