--- a/src/styles.scss
+++ b/src/styles.scss
@@ -168,5 +168,7 @@ body {
 .content {
   position: relative;
   margin-top: 74px;
-  height: 100%;
+  height: 100vh;
+  background: url('assets/backgrounds/mountain+range.png') no-repeat center;
+  background-size: cover;
 }
