--- a/src/styles.scss
+++ b/src/styles.scss
@@ -168,7 +168,7 @@ body {
 .content {
   position: relative;
   margin-top: 74px;
-  height: 100vh;
-  background: url('assets/backgrounds/mountain+range.png') no-repeat center;
-  background-size: cover;
+  //height: 100vh;
+  //background: url('assets/backgrounds/mountain+range.png') no-repeat center;
+  //background-size: cover;
 }
