--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -6,7 +6,8 @@
   <div class="row" >
     <div class="col">
       <app-bargraph [graph]="graph" [height]="height" [width]="width" [barWidth]="barWidth"></app-bargraph>
-
+    </div> <div class="col">
+      <app-bargraph [graph]="graph" [height]="height" [width]="width" [barWidth]="barWidth"></app-bargraph>
     </div>
   </div>
 
