Dynamic width of graph

--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -5,9 +5,9 @@
   <!--<app-piechart [graph]="graph" [max]="max"></app-piechart>-->
   <div class="row" >
     <div class="col">
-      <app-bargraph [graph]="graph" [height]="height" [width]="width" [barWidth]="barWidth"></app-bargraph>
+      <app-bargraph [graph]="graphs[0]"></app-bargraph>
     </div> <div class="col">
-      <app-bargraph [graph]="graph" [height]="height" [width]="width" [barWidth]="barWidth"></app-bargraph>
+      <app-bargraph [graph]="graphs[1]"></app-bargraph>
     </div>
   </div>
 
