Proper centering using a flex box

--- a/src/app/modules/graphs/components/bargraph/bargraph.component.html
+++ b/src/app/modules/graphs/components/bargraph/bargraph.component.html
@@ -1,1 +1,3 @@
-<canvas  class="segment bordered raised rounded-s centered" #canvas></canvas>
+<div class="margin-s padding bordered raised">
+  <canvas  class="segment  centered" #canvas></canvas>
+</div>
