--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -3,6 +3,11 @@
 </div>
 <div class="content" #content>
   <!--<app-piechart [graph]="graph" [max]="max"></app-piechart>-->
+  <div class="row">
+    <div class="centered col">
+      <p>This is paragraph</p>
+    </div>
+  </div>
   <div class="row" >
     <div class="col">
       <app-bargraph [graph]="graphs[0]"></app-bargraph>
