Use centering concept for temp graph title

--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -3,15 +3,19 @@
 </div>
 <div class="content" #content>
   <!--<app-piechart [graph]="graph" [max]="max"></app-piechart>-->
-  <div class="row">
-    <div class="centered col">
-      <p>This is paragraph</p>
-    </div>
-  </div>
+
   <div class="row" >
     <div class="col">
-      <app-bargraph [graph]="graphs[0]"></app-bargraph>
-    </div> <div class="col">
+      <div class="row">
+        <div class="centered col">
+          <p>This is paragraph</p>
+        </div>
+      </div>
+      <div class="col">
+        <app-bargraph [graph]="graphs[0]"></app-bargraph>
+      </div>
+    </div>
+    <div class="col">
       <app-bargraph [graph]="graphs[1]"></app-bargraph>
     </div>
   </div>
