--- a/src/app/modules/graphs/components/bargraph/bargraph.component.html
+++ b/src/app/modules/graphs/components/bargraph/bargraph.component.html
@@ -1,3 +1,12 @@
 <div class="margin-s padding bordered raised">
-  <canvas  class="segment  centered" #canvas></canvas>
+  <div class="row">
+    <div class="centered col">
+      <p>Title of the Graph</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <canvas  class="segment  centered" #canvas></canvas>
+    </div>
+  </div>
 </div>
