Use title for the graph

--- a/src/app/modules/graphs/components/bargraph/bargraph.component.html
+++ b/src/app/modules/graphs/components/bargraph/bargraph.component.html
@@ -1,7 +1,7 @@
 <div class="margin-s padding bordered raised">
   <div class="row">
     <div class="centered col">
-      <p>Title of the Graph</p>
+      <p>{{graph.title}}</p>
     </div>
   </div>
   <div class="row">
