Dynamic subtitles for graphs

--- a/src/app/modules/graphs/components/bargraph/bargraph.component.html
+++ b/src/app/modules/graphs/components/bargraph/bargraph.component.html
@@ -1,7 +1,12 @@
 <div class="margin-s padding bordered raised">
   <div class="row">
     <div class="centered col">
-      <p>{{graph.title}}</p>
+      <p class="title">{{graph.title}}</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="centered col">
+      <p class="sub-title">{{graph.subtitle}}</p>
     </div>
   </div>
   <div class="row">
