--- a/src/app/modules/graphs/components/bargraph/bargraph.component.html
+++ b/src/app/modules/graphs/components/bargraph/bargraph.component.html
@@ -1,7 +1,7 @@
 <div class="margin-s padding bordered raised">
   <div class="row">
     <div class="centered col">
-      <p class="title">{{graph.title}}</p>
+      <p class="margin title color-p">{{graph.title}}</p>
     </div>
   </div>
   <div class="row">
@@ -11,7 +11,7 @@
   </div>
   <div class="row">
     <div class="col">
-      <canvas  class="segment  centered" #canvas></canvas>
+      <canvas class="segment centered" #canvas></canvas>
     </div>
   </div>
 </div>
