Dynamic graph heights and proper bar title labling

--- a/src/app/modules/graphs/components/bargraph/bargraph.component.html
+++ b/src/app/modules/graphs/components/bargraph/bargraph.component.html
@@ -14,4 +14,13 @@
       <canvas class="segment centered" #canvas></canvas>
     </div>
   </div>
+  <div class="row">
+    <div class="col">
+      <div class="centered" [ngStyle]="{'width.px': graph.width}">
+        <div *ngFor="let bar of graph.bars" [ngStyle]="{'width.px': bar.width}" class="centered">
+          <span>{{bar.title}}</span>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
