Use different color for line in BarGraph

--- a/src/app/modules/graphs/components/bargraph/bargraph.component.html
+++ b/src/app/modules/graphs/components/bargraph/bargraph.component.html
@@ -1,4 +1,4 @@
-<div class="margin-s padding bordered raised">
+<div class="margin-s padding raised">
   <div class="row">
     <div class="centered col">
       <p class="margin title color-p">{{graph.title}}</p>
