Working lazy loading

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@
 //                Variables                  //
 ///////////////////////////////////////////////
 
-$colors: (
+$acp-colors: (
   'primary': #0E5A77,
   'secondary': #777529,
   'accent': #5a1321,
