Working router links

--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,6 +1,10 @@
 <div class="row no-padding margin-bs header-wrapper">
   <div class="col">
     <div class="margin options">
+      <a class="centered padding option"  routerLink="/auth/register">
+        Register
+        <fa name="user" class="padding"></fa>
+      </a>
       <div class="centered padding option">
         Profile
         <fa name="user" class="padding"></fa>
@@ -11,11 +15,11 @@
       </div>
     </div>
     <div class="navigation">
-      <div class="logo-wrapper padding">
+      <nav class="logo-wrapper padding" routerLink="/home">
         <div class="logo">
           <p><span class="color-p">Account</span><span class="color-s">+</span></p>
         </div>
-      </div>
+      </nav>
       <div class="elements">
         <div class="element padding centered-v">
           <div class="main-title padding">
