--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -17,7 +17,7 @@
     <div class="navigation">
       <nav class="logo-wrapper padding" routerLink="/home">
         <div class="logo">
-          <p><span class="color-p">Account</span><span class="color-s">+</span></p>
+          <p><span class="color-p">Account</span><span class="color-s">Plus</span></p>
         </div>
       </nav>
       <div class="elements">
