--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -53,13 +53,13 @@
       </div>
     </div>
     <div class="signup-container margin-ts">
-      <div class="bordered full-width signup-form">
+      <div class="bordered rounded-s bg-ivory full-width signup-form margin-rs">
         <div class="signup-title">
           <p>Create your personal account</p>
         </div>
       </div>
-      <div class="bordered signup-benefits">
-        <div class="bordered padding-s rounded-s">
+      <div class="bordered padding-s rounded-s signup-benefits">
+        <div class="">
           Benefits
         </div>
       </div>
