--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -53,14 +53,15 @@
       </div>
     </div>
     <div class="signup-container margin-ts">
-      <div class="bordered rounded-s bg-ivory full-width signup-form margin-rs">
+      <div class="full-width margin-rs segment signup-form ">
         <div class="signup-title">
           <p>Create your personal account</p>
         </div>
+        <app-register-form></app-register-form>
       </div>
-      <div class="bordered padding-s rounded-s signup-benefits">
-        <div class="">
-          Benefits
+      <div class="bordered rounded-s signup-benefits">
+        <div class="padding-s  bordered-b benefits-title">
+          <p>Why AccountPlus?</p>
         </div>
       </div>
     </div>
