--- a/src/app/modules/auth/pages/register/register.component.scss
+++ b/src/app/modules/auth/pages/register/register.component.scss
@@ -70,6 +70,10 @@
       .signup-benefits {
         width: 300px;
         margin-left: auto;
+
+        .benefits-title {
+
+        }
       }
     }
   }
