--- a/src/app/modules/auth/forms/register-form/register-form.component.html
+++ b/src/app/modules/auth/forms/register-form/register-form.component.html
@@ -1,15 +1,22 @@
-<form [formGroup]="profileForm" novalidate>
+<form [formGroup]="profileForm" novalidate class="signup-form">
+  <div class="form-control margin-ts">
+    <label for="signup-email">
+      Email:
+    </label>
+    <input type="text" id="signup-email" formControlName="email" class="margin-t bg-ivory">
+    <p class="info">We’ll occasionally send updates about your account to this inbox. We’ll never share your email address with anyone.</p>
+  </div>
 
-  <label>
-    Email:
-    <input type="text" formControlName="email">
-  </label>
+  <div class="form-control margin-ts">
+    <label for="signup-password">
+      Password:
+    </label>
+    <input type="text" id="signup-password"formControlName="password" class="margin-t bg-ivory">
 
-  <label>
-    Password:
-    <input type="text" formControlName="password">
-  </label>
+  </div>
 
-  <button type="submit" [disabled]="!profileForm.valid">Submit</button>
+  <p class="info">By clicking “Create an account” below, you agree to our <a>terms of service</a> and <a>privacy statement</a>privacy statement. We’ll occasionally send you account related emails.</p>
+
+  <button type="submit" [disabled]="!profileForm.valid">Create an account</button>
 
 </form>
