Initial design and reactive form for signup

--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -2,8 +2,8 @@
   <app-header></app-header>
 </div>
 <div class="centered content">
-  <div class="padding-s bordered main-body">
-    <div class="bordered headline">
+  <div class="padding-s main-body">
+    <div class="headline">
       <div class="headline-title">
         <p>Join AccountPlus</p>
       </div>
@@ -59,7 +59,7 @@
         </div>
         <app-register-form></app-register-form>
       </div>
-      <div class="bordered rounded-s signup-benefits">
+      <div class="bordered raised rounded-s signup-benefits">
         <div class="padding-s  bordered-b benefits-title">
           <p>Why AccountPlus?</p>
         </div>
