--- a/src/app/modules/auth/forms/register-form/register-form.component.html
+++ b/src/app/modules/auth/forms/register-form/register-form.component.html
@@ -4,7 +4,7 @@
       Email:
     </label>
     <input type="text" id="signup-email" formControlName="email" class="margin-t bg-ivory">
-    <p class="info">We’ll occasionally send updates about your account to this inbox. We’ll never share your email address with anyone.</p>
+    <p class="info margin-h">We’ll occasionally send updates about your account to this inbox. We’ll never share your email address with anyone.</p>
   </div>
 
   <div class="form-control margin-ts">
@@ -12,11 +12,11 @@
       Password:
     </label>
     <input type="text" id="signup-password"formControlName="password" class="margin-t bg-ivory">
-
+    <p class="info margin-h">Make sure it's more than 15 characters OR at least 8 characters including a number and a lowercase letter.</p>
   </div>
 
-  <p class="info">By clicking “Create an account” below, you agree to our <a>terms of service</a> and <a>privacy statement</a>privacy statement. We’ll occasionally send you account related emails.</p>
+  <p class="info margin-hs">By clicking “Create an account” below, you agree to our <a class="link">terms of service</a> and <a class="link">privacy statement</a>. We’ll occasionally send you account related emails.</p>
 
-  <button type="submit" [disabled]="!profileForm.valid">Create an account</button>
+  <app-button [text]="'Create an account'"></app-button>
 
 </form>
