--- a/src/app/modules/auth/forms/register-form/register-form.component.html
+++ b/src/app/modules/auth/forms/register-form/register-form.component.html
@@ -11,12 +11,11 @@
     <label for="signup-password">
       Password:
     </label>
-    <input type="text" id="signup-password"formControlName="password" class="margin-t bg-ivory">
+    <input type="password" id="signup-password"formControlName="password" class="margin-t bg-ivory">
     <p class="info margin-h">Make sure it's more than 15 characters OR at least 8 characters including a number and a lowercase letter.</p>
   </div>
 
   <p class="info margin-hs">By clicking “Create an account” below, you agree to our <a class="link">terms of service</a> and <a class="link">privacy statement</a>. We’ll occasionally send you account related emails.</p>
 
   <app-button [text]="'Create an account'"></app-button>
-
 </form>
