--- a/src/app/modules/auth/pages/register/register.component.scss
+++ b/src/app/modules/auth/pages/register/register.component.scss
@@ -33,11 +33,12 @@
       .step {
         display: inline-flex;
         opacity: 0.4;
+        cursor: pointer;
 
         .step-detail {
           .step-title {
             p {
-              font-size: 21px;
+              font-size: 16px;
               font-weight: 600;
             }
           }
@@ -68,7 +69,7 @@
       }
 
       .signup-benefits {
-        width: 300px;
+        width: 500px;
         margin-left: auto;
 
         .benefits-title {
