--- a/src/app/modules/shared/components/loader/loader.component.scss
+++ b/src/app/modules/shared/components/loader/loader.component.scss
@@ -8,7 +8,7 @@
   background-color: #d7e2e1;
   border-radius: 2px;
   background-clip: padding-box;
-  margin: 0.5rem 0 1rem 0;
+  //margin: 0.5rem 0 1rem 0;
   overflow: hidden; }
 .progress .determinate {
   position: absolute;
