Partially working behaviour subject

--- a/src/app/modules/auth/forms/register-form/register-form.component.html
+++ b/src/app/modules/auth/forms/register-form/register-form.component.html
@@ -17,5 +17,5 @@
 
   <p class="info margin-hs">By clicking “Create an account” below, you agree to our <a class="link">terms of service</a> and <a class="link">privacy statement</a>. We’ll occasionally send you account related emails.</p>
 
-  <app-button [text]="'Create an account'"></app-button>
+  <app-button [text]="'Create an account'" (click)="signUp()"></app-button>
 </form>
