Make loader service rely on primitive boolean

--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -33,4 +33,4 @@
     </div>
   </div>
 </div>
-<app-loader *ngIf="loaderService.loaderState | async"></app-loader>
+<app-loader *ngIf="loaderService.loaderState"></app-loader>
