--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,6 +106,7 @@ input {
   font-size: 19px;
   font-stretch: 100%;
   font-style: normal;
+  font-family: montserrat;
   font-variant-caps: normal;
   font-variant-east-asian: normal;
   font-variant-ligatures: normal;
