Consistent margins in register

--- a/src/app/modules/auth/forms/register-form/register-form.component.html
+++ b/src/app/modules/auth/forms/register-form/register-form.component.html
@@ -3,7 +3,7 @@
     <label for="signup-email">
       Email:
     </label>
-    <input type="text" id="signup-email" formControlName="email" class="margin-t bg-ivory">
+    <input type="text" id="signup-email" formControlName="email" class="margin-t bg-ivory" placeholder="name@example.com">
     <p class="info margin-h">We’ll occasionally send updates about your account to this inbox. We’ll never share your email address with anyone.</p>
   </div>
 
