--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,7 +65,7 @@ input {
   clip: auto;
   clip-path: none;
   clip-rule: nonzero;
-  color: rgb(0,0,0);
+  //color: rgb(0,0,0);
   color-interpolation: sRGB;
   color-interpolation-filters: linearRGB;
   color-rendering: auto;
@@ -489,9 +489,9 @@ li {
 }
 .content {
   position: relative;
-  margin-top: 74px;
+  margin-top: 70px;
   height: 100vh;
-  //background: url('assets/backgrounds/mountain+range.png') no-repeat center;
+  background: #d7e2e1;
   background-size: cover;
 }
 .full-width {
